--- a/TheResturantAppAPI/TheResturantApp/Web.config
+++ b/TheResturantAppAPI/TheResturantApp/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301879
@@ -10,11 +10,10 @@
   </configSections>
   <connectionStrings>
     
-    <add name="TRAContext" connectionString="Data Source=(local);Initial Catalog=resturant;Integrated Security=True;Persist Security Info=True; MultipleActiveResultSets=True;"
-      providerName="System.Data.SqlClient" />
+    <add name="TRAContextx" connectionString="Data Source=184.168.47.13; Initial Catalog=TBHIK; Persist Security Info=True; MultipleActiveResultSets=True; User ID=irfank;Password=Nidha789;" providerName="System.Data.SqlClient" />
+    <add name="TRAContext" connectionString="Data Source=(local);Initial Catalog=resturant;Integrated Security=True;Persist Security Info=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
 
-    <add name="TheResturantAppContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=TheResturantAppContext-20150917162810; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|TheResturantAppContext-20150917162810.mdf"
-      providerName="System.Data.SqlClient" />
+    <add name="TheResturantAppContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=TheResturantAppContext-20150917162810; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|TheResturantAppContext-20150917162810.mdf" providerName="System.Data.SqlClient" />
   
   </connectionStrings>
     
@@ -28,14 +27,7 @@
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
-  <system.webServer>
-    <handlers>
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <remove name="OPTIONSVerbHandler" />
-      <remove name="TRACEVerbHandler" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers>
-  </system.webServer>
+  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -62,6 +54,18 @@
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-5.2.2.0" newVersion="5.2.2.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
@@ -70,4 +74,11 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-</configuration>
+<system.webServer>
+    <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
+  </system.webServer></configuration>
