--- a/TheResturantAppAPI/TheResturantApp/Web.config
+++ b/TheResturantAppAPI/TheResturantApp/Web.config
@@ -11,6 +11,9 @@
   <connectionStrings>
     <!--To Be Used TRAContext-->
 
+    <add name="TRAContextev" connectionString="Data Source=184.168.47.13; Initial Catalog=TBHIK; Persist Security Info=True; MultipleActiveResultSets=True; User ID=irfank;Password=Nidha789;" providerName="System.Data.SqlClient" />
+    <add name="TRAContext" connectionString="Data Source=(local);Initial Catalog=resturant;Integrated Security=True;Persist Security Info=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+
   </connectionStrings>
     
   <appSettings>
