--- a/CoreRepository/CoreRepository.csproj
+++ b/CoreRepository/CoreRepository.csproj
@@ -34,8 +34,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="AppRepository.cs" />
-    <Compile Include="IRepository.cs" />
     <Compile Include="Model\BaseOrder.cs" />
     <Compile Include="Contracts\BusinessEntityBase.cs" />
     <Compile Include="Contracts\IBusinessEntity.cs" />
@@ -45,18 +43,20 @@
     <Compile Include="Helpers\PredicateHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DAL\SQLite.cs" />
-    <Compile Include="SampleSeedDB.cs" />
-    <Compile Include="TaskDatabase.cs" />
     <Compile Include="Model\DTOClasses.cs" />
+    <Compile Include="Model\Common.cs" />
+    <Compile Include="Model\Customer.cs" />
+    <Compile Include="DL\AppRepository.cs" />
+    <Compile Include="DL\SampleSeedDB.cs" />
+    <Compile Include="DL\IRepository.cs" />
+    <Compile Include="DL\TaskDatabase.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Connectivity.Plugin, Version=1.0.4.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Connectivity.Plugin, Version=1.0.4.0, Culture=neutral, PublicKeyToken=null">
       <HintPath>..\..\..\Users\DELL\Documents\Projects\RestaurantApp\packages\Xam.Plugin.Connectivity.1.0.4\lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Connectivity.Plugin.dll</HintPath>
-      <Private>True</Private>
     </Reference>
-    <Reference Include="Connectivity.Plugin.Abstractions, Version=1.0.4.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Connectivity.Plugin.Abstractions, Version=1.0.4.0, Culture=neutral, PublicKeyToken=null">
       <HintPath>..\..\..\Users\DELL\Documents\Projects\RestaurantApp\packages\Xam.Plugin.Connectivity.1.0.4\lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Connectivity.Plugin.Abstractions.dll</HintPath>
-      <Private>True</Private>
     </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
@@ -67,4 +67,7 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <ItemGroup>
+    <Folder Include="DL\" />
+  </ItemGroup>
 </Project>
