MongoDb repository Pattern IOC
MongoDB repository Pattern IOC implementation

--- a/IocCRUD_WEB/packages/repositories.config
+++ b/IocCRUD_WEB/packages/repositories.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Resto.API\packages.config" />
+  <repository path="..\Resto.Client\packages.config" />
+  <repository path="..\Resto.Data\packages.config" />
 </repositories>
