--- a/IocCRUD_WEB/resto.client/packages.config
+++ b/IocCRUD_WEB/resto.client/packages.config
@@ -2,6 +2,9 @@
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
+  <package id="MongoDB.Bson" version="2.1.0" targetFramework="net45" />
+  <package id="MongoDB.Driver" version="2.1.0" targetFramework="net45" />
+  <package id="MongoDB.Driver.Core" version="2.1.0" targetFramework="net45" />
   <package id="Ninject" version="3.2.2.0" targetFramework="net452" />
   <package id="Ninject.MVC5" version="3.2.1.0" targetFramework="net452" />
   <package id="Ninject.Web.Common" version="3.2.0.0" targetFramework="net452" />
