Ioc MISC_Changes
Chagnes

--- a/IocCRUD_WEB/resto.data/Resto.Data.csproj
+++ b/IocCRUD_WEB/resto.data/Resto.Data.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DbContext.cs" />
+    <Compile Include="Helper\BsonDeserializer.cs" />
     <Compile Include="IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository.cs" />
